[package]
name = "devpoker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.32.0", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
regex = "1.9.5"
rusqlite = { version = "0.29.0", features = ["bundled"] }
tokio-rusqlite = "0.4.0"
rand = "0.8.5"